--- a/EasyLearn/UI/CustomControls/User/UserView.xaml
+++ b/EasyLearn/UI/CustomControls/User/UserView.xaml
@@ -194,6 +194,7 @@
                     <Grid Grid.Row="2" Margin="16 14 0 0">
                         <Grid.ColumnDefinitions>
                             <ColumnDefinition Width="130"/>
+                            <ColumnDefinition Width="20"/>
                             <ColumnDefinition/>
                         </Grid.ColumnDefinitions>
 
@@ -240,6 +241,7 @@
                                    Foreground="{DynamicResource EasyBlack}"
                                    FontSize="13"
                                    Grid.Column="1"
+                                   HorizontalAlignment="Center"
                                    FontWeight="Bold"
                                    FontFamily="Arial">
 
@@ -250,6 +252,7 @@
                                    FontSize="13"
                                    Grid.Row="1"
                                    FontWeight="Bold"
+                                   HorizontalAlignment="Center"
                                    Grid.Column="1"
                                    FontFamily="Arial">
 
@@ -260,6 +263,7 @@
                                    FontSize="13"
                                    Grid.Row="2"
                                    FontWeight="Bold"
+                                   HorizontalAlignment="Center"
                                    Grid.Column="1"
                                    FontFamily="Arial">
 
@@ -270,6 +274,7 @@
                                    FontSize="13"
                                    Grid.Row="3"
                                    FontWeight="Bold"
+                                   HorizontalAlignment="Center"
                                    Grid.Column="1"
                                    FontFamily="Arial">
 
