--- a/EasyLearn/UI/Resourses/Styles.xaml
+++ b/EasyLearn/UI/Resourses/Styles.xaml
@@ -70,7 +70,7 @@
                 <Setter Property="Button.Background" Value="{DynamicResource EasyGreenLight}"/>
             </Trigger>
             <Trigger Property="IsEnabled" Value="False">
-                <Setter Property="Foreground" Value="#568f56"/>
+                <Setter Property="Foreground" Value="{DynamicResource EasyGrayDark}"/>
             </Trigger>
         </Style.Triggers>
     </Style>
@@ -114,10 +114,11 @@
     <Style x:Key="EasyTextBoxBase" TargetType="TextBox"  BasedOn="{StaticResource MaterialDesignOutlinedTextBox}">
         <Setter Property="BorderThickness" Value="0.6"/>
         <Setter Property="Background" Value="#f2f2f2"/>
-        <Setter Property="MaxHeight" Value="45"/>
-        <Setter Property="Height" Value="45"/>
-        <Setter Property="FontSize" Value="14"/>
-        <Setter Property="FontFamily" Value="Arial"/>
+        <Setter Property="MaxHeight" Value="40"/>
+        <Setter Property="Height" Value="40"/>
+        <Setter Property="Foreground" Value="{DynamicResource EasyBlack}"/>
+        <Setter Property="FontSize" Value="13"/>
+        <Setter Property="FontFamily" Value="Sans"/>
         <Setter Property="VerticalAlignment" Value="Top"/>
         <Setter Property="Margin" Value="0 0 0 14" />
         <Style.Triggers>
@@ -179,13 +180,31 @@
     </Style>
 
     <Style x:Key="EasyComboBox" TargetType="ComboBox" BasedOn="{StaticResource MaterialDesignOutlinedComboBox}">
-        <Setter Property="Background" Value="#f2f2f2"/>
-        <Setter Property="FontFamily" Value="Arial"/>
-        <Setter Property="FontSize" Value="14"/>
-        <Setter Property="Height" Value="45"/>
-        <Setter Property="MaxHeight" Value="45"/>
+        <Setter Property="Background" Value="{DynamicResource EasyGreenSuperLight}"/>
+        <Setter Property="FontFamily" Value="Sans"/>
+        <Setter Property="FontSize" Value="13"/>
+        <Setter Property="Height" Value="40"/>
+        <Setter Property="MaxHeight" Value="40"/>
         <Setter Property="Foreground" Value="{StaticResource EasyBlack}"/>
-        <Setter Property="BorderBrush" Value="{DynamicResource EasyGray}"/>
+        <Setter Property="BorderBrush" Value="{DynamicResource EasyGreen}"/>
+        <Style.Triggers>
+            <Trigger Property="IsFocused" Value="True">
+                <Setter Property="BorderBrush" Value="{DynamicResource EasyGreen}"/>
+            </Trigger>
+            <Trigger Property="IsMouseOver" Value="True">
+                <Setter Property="BorderBrush" Value="{DynamicResource EasyGreen}"/>
+            </Trigger>
+        </Style.Triggers>
+    </Style>
+
+    <Style x:Key="EasyMainComboBox" TargetType="ComboBox" BasedOn="{StaticResource MaterialDesignOutlinedComboBox}">
+        <Setter Property="Background" Value="{DynamicResource EasyGreenSuperLight}"/>
+        <Setter Property="FontFamily" Value="Sans"/>
+        <Setter Property="FontSize" Value="13"/>
+        <Setter Property="Height" Value="40"/>
+        <Setter Property="MaxHeight" Value="40"/>
+        <Setter Property="Foreground" Value="{StaticResource EasyBlack}"/>
+        <Setter Property="BorderBrush" Value="{DynamicResource MainColor}"/>
         <Style.Triggers>
             <Trigger Property="IsFocused" Value="True">
                 <Setter Property="BorderBrush" Value="{DynamicResource MainColor}"/>
